testdata/trans/error/unresolved-try/err.go
package foo

import "fmt"

func f() {
	1 + try(fmt.Println("hello"))
}
